--- a/pass.html
+++ b/pass.html
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Lab 06</title></head>
- 
+
+<head>
+    <title>Lab 06</title>
+</head>
+
 <body>
     <h1>Pass phrase by</h1>
 
-<h2>Getting input</h2>
+    <h2>Getting input</h2>
 
-<form>
-    <label for="form1_secret"> Enter the secret phrase</label>
-    <input type ="password" id="form1_secret" name="form1_secret"  value="Let me in"> <br>
+    <form>
+        <label for="form1_secret"> Enter the secret phrase</label>
+        <input type="password" id="form1_secret" name="form1_secret" value="Let me in"> <br>
 
-    <label for="form1_guess">Enter a phrase </label>
-    <input type ="text" id="form1_guess" name="form1_guess" autofocus> <br>
+        <label for="form1_guess">Enter a phrase </label>
+        <input type="text" id="form1_guess" name="form1_guess" autofocus> <br>
 
-    <input type="button" onclick="processPhrase()" value="check the phrase">
-</form>
-
-
-<p id="result">This text will be replaced </p>
-
-<script> 
-var correct = 0
-var wrong = 0
+        <input type="button" onclick="processPhrase()" value="check the phrase">
+    </form>
 
 
-function processPhrase (){
-    console.log("Getting form values")
-    secret = document.getElementById("form1_secret").value
-    guess = document.getElementById("form1_guess").value
-    
-    //confirmed = confirm("Are these the values? "+secret+" and "+guess)
-     //result = secret.localeCompare(guess);
-    out = document.getElementById("result")
-    
-    if(secret == guess){
-        correct ++
-        alert("Access allowed!")
-        out.innerHTML = "correct score"+correct
-    } else {
-        wrong++
-        alert ("Access denied!")
-        out.innerHTML ="wrong score"+ wrong
-    }
-    out.innerHTML = "correct count"+ correct +" ; wrong count "+ wrong
-}
-</script>
+    <p id="result">This text will be replaced </p>
+
+    <script>
+        var correct = 0
+        var wrong = 0
+
+
+        function processPhrase() {
+            console.log("Getting form values")
+            secret = document.getElementById("form1_secret").value
+            guess = document.getElementById("form1_guess").value
+
+            //confirmed = confirm("Are these the values? "+secret+" and "+guess)
+            //result = secret.localeCompare(guess);
+            out = document.getElementById("result")
+
+            if (secret == guess) {
+                correct++
+                alert("Access allowed!")
+                out.innerHTML = "correct score" + correct
+            } else {
+                wrong++
+                alert("Access denied!")
+                out.innerHTML = "wrong score" + wrong
+            }
+            out.innerHTML = "correct count" + correct + " ; wrong count " + wrong
+        }
+    </script>
+
+    <div class="container">
+        <img src="anaconda (1).jpg"  onclick="newImage()" height="200" weight="200" id = "image">
+
+        <script>
+
+            var usingImage = 1;
+            function newImage() {
+
+                switch (usingImage) {
+                    case 1:
+                        document.getElementById("image").src = "anaconda (1).jpg"
+                        usingImage = 2
+                        break
+
+                    case 2:
+                        document.getElementById("image").src = "Panther2.jpg"
+                        usingImage = 3
+                        break
+
+                    case 3:
+                        document.getElementById("image").src = "Vulture-scaled.jpg"
+                        usingImage = 1
+                        break
+                }
+
+            }
+        </script>
+
+    </div>
+
 </body>
-</html> 
+
+</html>
