--- a/arithmetic.html
+++ b/arithmetic.html
@@ -9,32 +9,30 @@
 <h2>Saikrishna computes</h2>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_base"> Enter a base </label>
+    <input type ="number" id="form1_baseElement" name="form1_base" value=10> <br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+    <label for="form1_expo"> Enter an Exponent </label>
+    <input type ="number" id="form1_exponentElement" name="form1_expo" value=2> <br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
+    <input type="button" onclick="powers()" value="Compute">
 </form>
 
 
-<p id="result">This text will be replaced </p>
+<p id="result">Here is the Result </p>
 
 <script> 
 
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
+function powers (){
     
+    baseElement = document.getElementById("form1_baseElement").value
+    expoElement = document.getElementById("form1_exponentElement").value
+    result=" "
     out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
-    } else {
-        out.innerHTML = "Values were not confirmed"
+    for(var i=1;i<=expoElement;i++){       
+        result += Math.pow(baseElement,i)+" "
     }
+    out.innerHTML="Powers of "+baseElement+" are: "+result;
 }
 </script>
 
