--- a/arithmetic.html
+++ b/arithmetic.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
 <title>Arithemetic</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+ integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
+ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</head>
 <h1> Saikrishna Vuppala Computes</h1>
 
 <body>
@@ -8,13 +16,13 @@
     <h2>Getting input</h2>
 
     <form>
-        <label for="form1_num">Enter a Base</label>
-        <input type="number" id="form1_num" name="form1_num" value="10"> <br>
+        <label class="form-label" for="form1_num">Enter a Base</label>
+        <input class="form-text" type="number" id="form1_num" name="form1_num" value="10"> <br>
 
-        <label for="form1_exp">Enter exponent </label>
-        <input type="number" id="form1_exp" name="form1_exp" value="2"> <br>
+        <label class="form-label" for="form1_exp">Enter exponent </label>
+        <input class="form-text" type="number" id="form1_exp" name="form1_exp" value="2"> <br>
 
-        <input type="button" onclick="powers()" value="compute">
+        <input class="btn btn-informat" type="button" onclick="powers()" value="compute">
     </form>
 
 
@@ -42,16 +50,18 @@
         }
     </script>
     <form>
-        <input type="radio" id="rb_plus" name="color" value="plus" checked onclick="processRadio()">
-        <label for="rb_plus">+</label></br>
+        <div class="form-check">
+        <input class="form-check-input" type="radio" id="rb_plus" name="color" value="plus" checked onclick="processRadio()">
+        <label class="form-label" for="rb_plus">+</label></br>
 
-        <input type="radio" id="rb_minus" name="color" value="minus"onclick="processRadio()">
-        <label for="rb_minus">-</label></br>
+        <input class="form-check-input" type="radio" id="rb_minus" name="color" value="minus"onclick="processRadio()">
+        <label class="form-label" for="rb_minus">-</label></br>
 
-        <input type="radio" id="rb_times" name="color" value="times" onclick="processRadio()">
-        <label for="rb_times">*</label></br>
-        <input type="radio" id="rb_divide" name="color" value="divide" onclick="processRadio()" >
-        <label for="rb_divide">/</label></br>
+        <input class="form-check-input" type="radio" id="rb_times" name="color" value="times" onclick="processRadio()">
+        <label class="form-label" for="rb_times">*</label></br>
+        <input class="form-check-input" type="radio" id="rb_divide" name="color" value="divide" onclick="processRadio()" >
+        <label class="form-label" for="rb_divide">/</label></br>
+    </div>
 
 
         <!-- <input type="button" onclick="processRadio()" value="Get values from radio group"> -->
