--- a/arithmetic.html
+++ b/arithmetic.html
@@ -22,7 +22,7 @@
         <label class="form-label" for="form1_exp">Enter exponent </label>
         <input class="form-text" type="number" id="form1_exp" name="form1_exp" value="2"> <br>
 
-        <input class="btn btn-informat" type="button" onclick="powers()" value="compute">
+        <input class="btn btn-primary" type="button" onclick="powers()" value="compute">
     </form>
 
 
