--- a/car.html
+++ b/car.html
@@ -22,7 +22,7 @@
         <input class="form-check-input" type ="checkbox" id="form1_gps" name="form1_gps" value="gps"> <br>
     </div>
     
-        <input class="btn btn-informat" type="button" onclick="orderCar()" value="Order a Car">
+        <input class="btn btn-primary" type="button" onclick="orderCar()" value="Order a Car">
     </form>
     <form>
         <b><i></i><label class="form-label" for="property_name">Enter a property </label></b></i>
@@ -31,7 +31,7 @@
         <b><i></i><label class="form-label" for="property_value">Enter a value </label></b></i>
         <input class="form-text" type="text" id="property_value" name="property_value" value="blue">
         <br><br>
-        <input class="btn btn-informat" type="button" onclick="updateCar()" value="Update the car">
+        <input class="btn btn-primary" type="button" onclick="updateCar()" value="Update the car">
     </form>
     
     <p id="result">This text will be replaced </p>
