--- a/pass.html
+++ b/pass.html
@@ -23,7 +23,7 @@
         <label class="form-label" for="form1_guess">Enter a phrase </label>
         <input class="form-text" type="text" id="form1_guess" name="form1_guess" autofocus> <br>
 
-        <input class="btn btn-informat"type="button" onclick="processPhrase()" value="check the phrase">
+        <input class="btn btn-primary"type="button" onclick="processPhrase()" value="check the phrase">
     </form>
 
 
