--- a/arithmetic.html
+++ b/arithmetic.html
@@ -10,7 +10,28 @@
  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <h1> Saikrishna Vuppala Computes</h1>
+<style>
+    form{
+        background-color:lightcyan;
+        border: solid brown;
+    }
+    .button {
+            background-color: green;
+            border: none;
+            color: white;
+            padding: 8px 15px;
+            text-align: center;
+            text-decoration: none;
+            font-size: 16px;
+        }
 
+        .h2 {
+            font-family: Arial, Helvetica, sans-serif;
+            color: black;
+        }
+
+        /* .button5 {background-color: #555555;} Black */
+    </style>
 <body>
 
     <h2>Getting input</h2>
