--- a/pass.html
+++ b/pass.html
@@ -11,6 +11,13 @@
  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 
+<style>
+    form{
+        background-color: lightsteelblue;
+        border: solid plum;
+    }
+</style>
+
 <body>
     <h1>Pass phrase by Saikrishna Vuppala</h1>
 
