--- a/car.html
+++ b/car.html
@@ -7,6 +7,20 @@
  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+ <style>
+    form{
+        background-color:darkturquoise ;
+        border:solid plum;
+    }
+
+    p{
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    }
+    h2{
+        font-family: Arial, Helvetica, sans-serif;
+    }
+</style>
 <body>
     <h1> Saikrishna Vuppala Computes</h1>
 
